refactor: migrate to playwright - fixed duplicate browser issue in a11y. ideally, would have been caught in a review. - use mocha-play instead of mocha-pup. - marked/cleaned several red flags in code, regarding forced exits and swallowed errors. these probably cause the flakiness on Mac CI. - removed console hacks in favor of proper proxying of messages. - removed infinite loop for trying to handle never ending test runs.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . -f codeframe",
     "pretest": "yarn typecheck && yarn lint",
     "test": "yarn test:browser && yarn test:node",
-    "test:browser": "mocha-pup \"packages/**/test/**/*.spec.ts?(x)\"",
+    "test:browser": "mocha-play \"packages/**/test/**/*.spec.ts?(x)\"",
     "test:node": "mocha \"packages/**/test/**/*.unit.ts?(x)\"",
     "typecheck": "tsc --noEmit",
     "prettify": "npx prettier \"packages/**/*.{js,ts,tsx}\" --write"
@@ -38,7 +38,6 @@
     "@types/minimatch": "^3.0.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "12",
-    "@types/puppeteer": "^5.4.3",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/sinon": "^9.0.10",
@@ -61,9 +60,10 @@
     "mini-css-extract-plugin": "^1.3.5",
     "minimatch": "^3.0.4",
     "mocha": "^8.2.1",
-    "mocha-pup": "^5.1.6",
+    "mocha-play": "^1.0.1",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "7.0.0",
+    "playwright-chromium": "^1.8.0",
+    "playwright-core": "^1.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
